# langgraph-legacy-archive

./: .gitignore  README.md  cli.py  langgraph.json  mcp_config.json  pyproject.toml
archive/: README.md
archive/deepagent/: README.md  __init__.py  agent.py  example.py  run.py  subagent_example.py  test.py  tools.py
archive/deepagent/archive/: analyze_llm_calls.py  orchestrator_worker.py  test_orchestrator_worker.py  test_orchestrator_worker_detailed.py  test_search_tool.py
archive/tests/agents/: test_chaining.py  test_multiple_workers_coding_agent.py  test_multiple_workers_coding_agent_factory.py  test_python_repl_agent.py  test_repl_data_analysis_agent.py  test_stock_research_agent.py  test_stock_research_detailed.py  test_stock_research_simple.py
docs/: GOOGLE_DRIVE_API_SETUP.md  MINERU_LMDEPLOY_MANUAL.md  claude_desktop_query.md
src/: __init__.py
src/agents/: __init__.py  agent.py  base.py  factory.py  prompts.py  worker.py
src/mcp/: __init__.py  agent.py  realtime_agent.py
src/tools/: __init__.py  base.py  brave_search.py  calculator.py  code_execution.py  csv_tools.py  docker_execution.py  factory.py  filesystem.py  ipython_execution.py  planning.py  task_tool.py
src/utils/: __init__.py  config.py  errors.py  paths.py  token_usage_tracker.py
tests/: README.md
tests/agents/: test_coding_agent.py
tests/csv_agent/: test_csv_agent_ipython.py  test_csv_agent_planning_tool.py  test_csv_data_analysis_agent.py
tests/docker/: Dockerfile.sandbox  test_docker_sdk_direct.py
tests/docling/: DOCLING_USAGE_GUIDE.md
tests/examples/: REFACTORING_PLAN.md  __init__.py
tests/rag/: test_rag_agent.py  test_rag_agent_csv_lookup.py
tests/scripts/: README_gdrive_api.md  add_tags_to_docs.py  check_langfuse_status.py  check_pdf_dependencies.py  cleanup_docker_containers.py  convert_pdf_to_markdown.py  download_gdrive_api.py  download_gdrive_folder.py  extract_references_from_mineru.py  fix_docling_structure.py  generate_docs_index.py  install_ocr_dependencies.sh  install_poppler.sh  mineru_resource_comparison.py  ollama_embedding_gpu_timer.py  poster_to_markdown.py  reclassify_docs.py  script_ingest_deseq2_rag.py  script_ingest_pdf_rag.py  standardize_dates.py  test_gdrive_setup.py  test_langgraph_server.py  test_pdf_rag_langgraph.py
tests/utils/: test_deseq2_analysis.py  test_mcp.py
(+136 files in other folders)
